--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ form {
 }
 
 nav {
-  background-color: #007bff;
+  background-color: #a6c8ec;
   padding: 10px;
   border-radius: 8px;
   margin-bottom: 20px;
