--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ form {
 }
 
 .text-info {
-  color: #17a2b8;
+  color: #175fb1;
 }
 
 .nav-link {
@@ -73,7 +73,7 @@ form {
 }
 
 .nav-link:hover {
-  background-color: #0056b3;
+  background-color: #9cb8d6;
   color: #fff;
 }
 
