--- a/src/style.css
+++ b/src/style.css
@@ -29,10 +29,6 @@ p {
   text-align: center;
 }
 
-form {
-  margin-top: 20px;
-}
-
 .form-label {
   font-weight: bold;
   margin-bottom: 5px;
@@ -61,30 +57,43 @@ form {
   background-color: #0056b3;
 }
 
-.text-center {
-  text-align: center;
-}
-
-.text-danger {
-  color: #dc3545;
-}
-
-.text-info {
-  color: #175fb1;
-}
-
-.nav-link {
-  text-decoration: none;
+.btn-secondary {
+  background-color: #6c757d;
   color: #fff;
-  padding: 10px 15px;
-  display: inline-block;
+  border: none;
+  padding: 10px;
   border-radius: 4px;
-  transition: background-color 0.3s, color 0.3s;
+  cursor: pointer;
+  width: 100%;
 }
 
-.nav-link:hover {
-  background-color: #9cb8d6;
+.btn-secondary:hover {
+  background-color: #5a6268;
+}
+
+.table {
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+.table th {
+  background-color: #007bff;
   color: #fff;
+}
+
+.table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.edit-form {
+  margin-top: 20px;
 }
 
 nav {
