--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   height: 40vmin;
   pointer-events: none;
 }
-.pontszam{
-  width: 10px;
+.pontszam input{
+  width: 2px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
