--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url('https://fonts.google.com/specimen/Montserrat');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
