--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
+
 body {
-  font-family: 'Times New Roman', Times, serif, sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
